<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>bare</class>
 <widget class="QDialog" name="bare">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>515</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QWidget" name="widget" native="true">
   <property name="geometry">
    <rect>
     <x>60</x>
     <y>40</y>
     <width>681</width>
     <height>451</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(238, 238, 238);</string>
   </property>
   <widget class="QLineEdit" name="lineEditId">
    <property name="geometry">
     <rect>
      <x>270</x>
      <y>80</y>
      <width>211</width>
      <height>22</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border: 1.6px solid rgba(170,173,174,255)rgb(255, 255, 255); border-radius: 5px;
background-color: rgb(255, 255, 255);</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_14">
    <property name="geometry">
     <rect>
      <x>180</x>
      <y>70</y>
      <width>51</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 16pt &quot;Segoe UI Symbol&quot;;</string>
    </property>
    <property name="text">
     <string>ID</string>
    </property>
   </widget>
   <widget class="QPushButton" name="cancel">
    <property name="geometry">
     <rect>
      <x>50</x>
      <y>410</y>
      <width>241</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#cancel {
    background-color: rgb(28, 44, 54);
border: 1.6px solid rgba(170,173,174,255)rgb(255, 255, 255); border-radius: 5px;

    color: rgb(213, 216, 218);
    font: 700 9pt &quot;Segoe UI&quot;;
}

QPushButton#cancel:hover {
  /* Darker shade when hovering */
	background-color: #284853;
    color: rgb(255, 255, 255);  /* Optional: Change text color on hover */
}

QPushButton#cancel:pressed {
	background-color: rgb(74, 74, 74);
    color: rgb(255, 255, 255);  /* Optional: Change text color when pressed */
}
</string>
    </property>
    <property name="text">
     <string>ANNULER</string>
    </property>
    <property name="icon">
     <iconset>
      <normaloff>../../firqs/icons/annule.png</normaloff>../../firqs/icons/annule.png</iconset>
    </property>
    <property name="iconSize">
     <size>
      <width>30</width>
      <height>25</height>
     </size>
    </property>
   </widget>
   <widget class="QPushButton" name="envoi">
    <property name="geometry">
     <rect>
      <x>350</x>
      <y>410</y>
      <width>241</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#envoi {
    background-color: rgb(28, 44, 54);
border: 1.6px solid rgba(170,173,174,255)rgb(255, 255, 255); border-radius: 5px;

    color: rgb(213, 216, 218);
    font: 700 9pt &quot;Segoe UI&quot;;
}

QPushButton#envoi:hover {
  /* Darker shade when hovering */
	background-color: #284853;
    color: rgb(255, 255, 255);  /* Optional: Change text color on hover */
}

QPushButton#envoi:pressed {
	background-color: rgb(74, 74, 74);
    color: rgb(255, 255, 255);  /* Optional: Change text color when pressed */
}
</string>
    </property>
    <property name="text">
     <string>CRIER LA CARTE</string>
    </property>
    <property name="icon">
     <iconset>
      <normaloff>../../firqs/icons/carte-bancaire.png</normaloff>../../firqs/icons/carte-bancaire.png</iconset>
    </property>
    <property name="iconSize">
     <size>
      <width>30</width>
      <height>25</height>
     </size>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>130</x>
      <y>180</y>
      <width>351</width>
      <height>111</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="envoi_2">
    <property name="geometry">
     <rect>
      <x>210</x>
      <y>350</y>
      <width>241</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#envoi_2 {
    background-color: rgb(28, 44, 54);
border: 1.6px solid rgba(170,173,174,255)rgb(255, 255, 255); border-radius: 5px;

    color: rgb(213, 216, 218);
    font: 700 9pt &quot;Segoe UI&quot;;
}

QPushButton#envoi_2:hover {
  /* Darker shade when hovering */
	background-color: #284853;
    color: rgb(255, 255, 255);  /* Optional: Change text color on hover */
}

QPushButton#envoi_2:pressed {
	background-color: rgb(74, 74, 74);
    color: rgb(255, 255, 255);  /* Optional: Change text color when pressed */
}
</string>
    </property>
    <property name="text">
     <string>CODE A BARRE</string>
    </property>
    <property name="icon">
     <iconset>
      <normaloff>../../firqs/icons/bar.png</normaloff>../../firqs/icons/bar.png</iconset>
    </property>
    <property name="iconSize">
     <size>
      <width>30</width>
      <height>25</height>
     </size>
    </property>
   </widget>
   <widget class="QTableView" name="tableView">
    <property name="geometry">
     <rect>
      <x>80</x>
      <y>120</y>
      <width>511</width>
      <height>231</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true"/>
    </property>
   </widget>
   <widget class="QPushButton" name="envoi3">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>20</y>
      <width>91</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#envoi3 {
    background-color: rgb(28, 44, 54);
border: 1.6px solid rgba(170,173,174,255)rgb(255, 255, 255); border-radius: 5px;

    color: rgb(213, 216, 218);
    font: 700 9pt &quot;Segoe UI&quot;;
}

QPushButton#envoi3:hover {
  /* Darker shade when hovering */
	background-color: #284853;
    color: rgb(255, 255, 255);  /* Optional: Change text color on hover */
}

QPushButton#envoi3:pressed {
	background-color: rgb(74, 74, 74);
    color: rgb(255, 255, 255);  /* Optional: Change text color when pressed */
}
</string>
    </property>
    <property name="text">
     <string>VOIR</string>
    </property>
    <property name="icon">
     <iconset>
      <normaloff>../../firqs/icons/jumelles.png</normaloff>../../firqs/icons/jumelles.png</iconset>
    </property>
    <property name="iconSize">
     <size>
      <width>25</width>
      <height>23</height>
     </size>
    </property>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
